--- a/index.html
+++ b/index.html
@@ -7,24 +7,29 @@
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
-  <!-- Navigation -->
+
+
+  <!-- Navigation tabs -->
   <nav>
     <input type="checkbox" id="menu-toggle" />
     <label for="menu-toggle" class="hamburger">&#9776; Menu</label>
     <ul class="main-links">
-  <li><a href="#about#close-nav">About</a></li>
-  <li><a href="#skills#close-nav">Skills</a></li>
-  <li><a href="#projects#close-nav">Projects</a></li>
-  <li><a href="#experience#close-nav">Experience</a></li>
-  <li><a href="#education#close-nav">Education</a></li>
-  <li><a href="#interests#close-nav">Interests</a></li>
-  <li><a href="#signup#close-nav">Contact</a></li>
-</ul>
+      <li><a href="#about#close-nav">About</a></li>
+      <li><a href="#skills#close-nav">Skills</a></li>
+      <li><a href="#projects#close-nav">Projects</a></li>
+      <li><a href="#experience#close-nav">Experience</a></li>
+      <li><a href="#education#close-nav">Education</a></li>
+      <li><a href="#interests#close-nav">Interests</a></li>
+      <li><a href="#signup#close-nav">Contact</a></li>
+    </ul>
   </nav>
 
-  <!-- Hero Section -->
+
+
+  <!-- Hero page -->
   <div class="hero">
     <div class="hero-img">
       <img src="assets/images/thuku2.jpg" alt="Gideon Thuku portrait" class="profile-hover" />
@@ -36,7 +41,9 @@
     </div>
   </div>
 
-  <!-- About Section -->
+
+
+  <!-- About me (hero sec)-->
   <section id="about" class="card-section">
     <div class="container">
       <h2>About Me</h2>
@@ -66,7 +73,9 @@
     </div>
   </section>
 
-  <!-- Skills -->
+
+
+  <!-- Programming Languages -->
   <section id="skills" class="skills">
     <div class="container">
       <h2>Programming Languages</h2>
@@ -77,134 +86,131 @@
     </div>
   </section>
 
-  <!-- Projects -->
- <section id="projects">
-  <div class="container">
-    <h2>Projects</h2>
-    <div class="split-section">
-      <div class="split-text">
-        <div class="card-grid">
-          <div class="card">
-            <h3>Introduction to Python</h3>
-            <p><strong>Calculator Assignment</strong></p>
-            <p>This was one of my first projects using Python. I created a basic calculator that can add, subtract, multiply, or divide two numbers.</p>
-            <a href="https://github.com/GideonThuku/Intro-to-Python-Assignment-Calculator-assignment.git" target="_blank">🔗 View Project</a>
-          </div>
-          <div class="card">
-            <h3>PLP SEE Class</h3>
-            <p><strong>GitHub Project</strong></p>
-            <p>This project was part of the Software Engineering Essentials (SEE) class at Power Learn Project. It helped me apply what I’ve learned so far , about using GitHub, organizing code properly. </p>
-            <a href="https://github.com/GideonThuku/PLP_SEE" target="_blank">🔗 View Project</a>
+  <!-- My Projects -->
+  <section id="projects">
+    <div class="container">
+      <h2>Projects</h2>
+      <div class="split-section">
+        <div class="split-text">
+          <div class="card-grid">
+            <div class="card">
+              <h3>Introduction to Python</h3>
+              <p><strong>Calculator Assignment</strong></p>
+              <p>This was one of my first projects using Python. I created a basic calculator that can add, subtract, multiply, or divide two numbers.</p>
+              <a href="https://github.com/GideonThuku/Intro-to-Python-Assignment-Calculator-assignment.git" target="_blank">🔗 View Project</a>
+            </div>
+            <div class="card">
+              <h3>PLP SEE Class</h3>
+              <p><strong>GitHub Project</strong></p>
+              <p>This project was part of the Software Engineering Essentials (SEE) class at Power Learn Project. It helped me apply what I’ve learned so far, about using GitHub, organizing code properly.</p>
+              <a href="https://github.com/GideonThuku/PLP_SEE" target="_blank">🔗 View Project</a>
+            </div>
           </div>
         </div>
+        <img src="assets/images/art2.jpg" alt="Projects Image" />
       </div>
-      <img src="assets/images/art2.jpg" alt="Projects Image" />
     </div>
-  </div>
-</section>
+  </section>
 
 
- <!-- Experience -->
-<section id="experience" class="card-section">
-  <div class="container">
-    <h2>Professional Experience</h2>
-    <div class="split-section">
-      <!-- LEFT SIDE: Stack PLP + Camera vertically -->
-      <div class="experience-img-wrapper vertical-stack">
-        <img src="assets/images/plp.jpg" alt="Gideon PLP image" class="experience-profile" />
-        <img src="assets/images/camera.jpg" alt="Camera Role" class="experience-profile" />
-      </div>
 
-      <!-- RIGHT SIDE: Timeline content -->
-      <div class="split-text">
-        <div class="timeline">
-          <div class="timeline-item">
-            <div class="timeline-icon">👥</div>
-            <div class="timeline-content">
-              <h3>Africa Ability Trust</h3>
-              <p><strong>Co-Executive Director</strong> (Mar 2025 – Present)</p>
-              <ul class="no-bullets">
-                <li>Strategic leadership in disability advocacy</li>
-                <li>Program oversight and evaluation</li>
-                <li>Community outreach and awareness</li>
-                <li>Building partnerships</li>
-              </ul>
+  <!-- Professional Experience -->
+  <section id="experience" class="card-section">
+    <div class="container">
+      <h2>Professional Experience</h2>
+      <div class="split-section">
+        <div class="experience-img-wrapper vertical-stack">
+          <img src="assets/images/plp.jpg" alt="Gideon PLP image" class="experience-profile" />
+          <img src="assets/images/camera.jpg" alt="Camera Role" class="experience-profile" />
+        </div>
+        <div class="split-text">
+          <div class="timeline">
+            <div class="timeline-item">
+              <div class="timeline-icon">👥</div>
+              <div class="timeline-content">
+                <h3>Africa Ability Trust</h3>
+                <p><strong>Co-Executive Director</strong> (Mar 2025 – Present)</p>
+                <ul class="no-bullets">
+                  <li>Strategic leadership in disability advocacy</li>
+                  <li>Program oversight and evaluation</li>
+                  <li>Community outreach and awareness</li>
+                  <li>Building partnerships</li>
+                </ul>
+              </div>
             </div>
-          </div>
-
-          <div class="timeline-item">
-            <div class="timeline-icon">🎥</div>
-            <div class="timeline-content">
-              <h3>Kuza App</h3>
-              <p><strong>Multimedia Producer</strong> (May 2020 – Present)</p>
-              <ul class="no-bullets">
-                <li>Content creation and distribution</li>
-                <li>Devotions, podcasts, video editing</li>
-                <li>Team collaboration</li>
-              </ul>
+            <div class="timeline-item">
+              <div class="timeline-icon">🎥</div>
+              <div class="timeline-content">
+                <h3>Kuza App</h3>
+                <p><strong>Multimedia Producer</strong> (May 2020 – Present)</p>
+                <ul class="no-bullets">
+                  <li>Content creation and distribution</li>
+                  <li>Devotions, podcasts, video editing</li>
+                  <li>Team collaboration</li>
+                </ul>
+              </div>
             </div>
-          </div>
-
-          <div class="timeline-item">
-            <div class="timeline-icon">🤖</div>
-            <div class="timeline-content">
-              <h3>Trace Up</h3>
-              <p><strong>Data Annotation Specialist</strong> (Nov 2019 – Present)</p>
-             <ul class="no-bullets">
-                <li>Data QA and annotation</li>
-                <li>ML Model training collaboration</li>
-              </ul>
+            <div class="timeline-item">
+              <div class="timeline-icon">🤖</div>
+              <div class="timeline-content">
+                <h3>Trace Up</h3>
+                <p><strong>Data Annotation Specialist</strong> (Nov 2019 – Present)</p>
+                <ul class="no-bullets">
+                  <li>Data QA and annotation</li>
+                  <li>ML Model training collaboration</li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
-
-<!-- Education Section -->
-<section id="education" class="card-section">
-  <div class="container">
-    <h2>Educational Background</h2>
-    <div class="card-grid">
-      <div class="card">
-        <h3>Power Learn Project</h3>
-        <p>Software Development Certification</p>
-        <p>Ongoing – Focused on HTML, CSS, Python, and GitHub for web development and backend logic.</p>
-      </div>
-      <div class="card">
-        <h3>Moi University</h3>
-        <p>Bachelor of Arts in Economics</p>
-        <p>Studied development economics, statistics, and policy analysis. Graduated with a solid foundation in research and critical thinking.</p>
-      </div>
-    </div>
-    <div class="hire-button" style="margin-top: 30px;">
-      <a href="assets/docs/GideonThukuCV.pdf" download>📄 Download My CV</a>
-    </div>
-  </div>
-</section>
- 
+  </section>
 
 
-  <!-- Interests -->
- <section id="interests" class="card-section">
-  <div class="container">
-  <h2>Interests</h2>
-    <div class="split-section interests">
-      <div class="split-text">
+
+  <!-- Educational Background -->
+  <section id="education" class="card-section">
+    <div class="container">
+      <h2>Educational Background</h2>
+      <div class="card-grid">
         <div class="card">
-          <p>This is not the beginning of my software journey, but it is a crucial step. Over the years, I’ve learned a lot through hands-on experience in AI and tech. Power Learn Project provides the structured growth and collaboration I’ve been seeking.</p>
-          <p>Since 2019, my fascination with AI has grown—from machine learning to the ethical and social potential of AGI and ASI. Yet, what drives me is not just the technology but the human impact—especially inclusion.</p>
-          <p>At Africa Ability Trust, I’ve witnessed the daily struggles faced by PWDs: inaccessible tools, poor mobility support, lack of education and work opportunities. I want to build tech that changes that. Code with purpose.</p>
+          <h3>Power Learn Project</h3>
+          <p>Software Development Certification</p>
+          <p>Ongoing – Focused on HTML, CSS, Python, and GitHub for web development and backend logic.</p>
+        </div>
+        <div class="card">
+          <h3>Moi University</h3>
+          <p>Bachelor of Arts in Economics</p>
+          <p>Studied development economics, statistics, and policy analysis. Graduated with a solid foundation in research and critical thinking.</p>
         </div>
       </div>
-      <img src="assets/images/art6.jpg" alt="Interests Image" />
+      <div class="hire-button">
+        <a href="assets/docs/GideonThukuCV.pdf" download>📄 Download My CV</a>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
 
 
-  <!-- Contact -->
+
+  <!-- Main Interests  -->
+  <section id="interests" class="card-section">
+    <div class="container">
+      <h2>Interests</h2>
+      <div class="split-section interests">
+        <div class="split-text">
+          <div class="card">
+            <p>This is not the beginning of my software journey, but it is a crucial step. Over the years, I’ve learned a lot through hands-on experience in AI and tech. Power Learn Project provides the structured growth and collaboration I’ve been seeking.</p>
+            <p>Since 2019, my fascination with AI has grown—from machine learning to the ethical and social potential of AGI and ASI. Yet, what drives me is not just the technology but the human impact—especially inclusion.</p>
+            <p>At Africa Ability Trust, I’ve witnessed the daily struggles faced by PWDs: inaccessible tools, poor mobility support, lack of education and work opportunities. I want to build tech that changes that. Code with purpose.</p>
+          </div>
+        </div>
+        <img src="assets/images/art6.jpg" alt="Interests Image" />
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact me forms -->
   <section id="signup">
     <div class="container">
       <h2>Contact Me</h2>
