little html update

--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!--Project: Personal Portfolio Website
+  Challenge: PLP Academy - July 2025 Cohort Hackathon 1: Portfolio Challenge
+
+ This project was built as part of a hackathon challenge to create a fully responsive
+  personal portfolio using only HTML and CSS.  I spent many hours building this from scratch,it was tough! 
+  I faced challenges with layout, responsiveness, and making everything look good 
+  without using JavaScript or external frameworks. Buti am glad I managed.-->
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
